config/networkpolicy/authorino-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuadrant-authorino-operator
  namespace: kuadrant-system
spec:
  podSelector:
    matchLabels:
      control-plane: authorino-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # controller-runtime metrics
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    # DNS resolution
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 5353
